ERA-4: Upgraded MySQL version to 8.x

--- a/example.env
+++ b/example.env
@@ -10,6 +10,7 @@ DATABASE_USER=
 DATABASE_PASSWORD=
 DATABASE_NAME=
 DATABASE_PORT=
+TEST_DATABASE_PORT=
 
 # Spring settings
 SPRING_ACTIVE_PROFILE=dev
