--- a/src/test/resources/application-mysql.yml
+++ b/src/test/resources/application-mysql.yml
@@ -4,14 +4,14 @@ spring:
     database:
       replace: none
   datasource:
-    url: jdbc:mysql://localhost:3306/ratos3?rewriteBatchedStatements=true&useSSL=false
+    url: jdbc:mysql://localhost:@TEST_DATABASE_PORT@/ratos3?rewriteBatchedStatements=true&useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
     username: @DATABASE_USER@
     password: @DATABASE_PASSWORD@
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQL57Dialect
+        dialect: org.hibernate.dialect.MySQL8Dialect
         show_sql: false
         format_sql: true
         generate_statistics: false
