--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -11,13 +11,16 @@ spring:
   application:
     name: ratos
   profiles:
-    active: mysql
+    active: test
   jpa:
     open-in-view: false
     hibernate:
       ddl-auto: none
     properties:
       hibernate:
+        show_sql: false
+        format_sql: true
+        generate_statistics: false
         cache:
           use_second_level_cache: false
           use_query_cache: false
@@ -58,6 +61,8 @@ spring:
           max-age: 30d
   flyway:
     enabled: true
+    clean-disabled: false
+    locations: classpath:db/migration
 
 management:
   health:
