--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -34,7 +34,7 @@ services:
     depends_on:
       - ratos_mysql_db
       - ratos_redis_db
-    image: gelever85/ratos3:latest
+    image: gelever85/e-ratos-backend:latest
     restart: always
     ports:
       - "80:8080"
