--- a/example.env
+++ b/example.env
@@ -24,6 +24,7 @@ REDIS_SECRET=
 REDIS_PORT=
 
 # e-Ratos settings
+RATOS_GAMIFICATION_ON=false
 RATOS_INIT_CACHE=NONE
 RATOS_INIT_CACHE_THREADS=1
 RATOS_SESSION_INCLUDE_GROUPS=false
