--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -102,7 +102,7 @@ ratos:
     timeout_penalty: ${RATOS_SESSION_TIMEOUT_PENALTY}
     tiemout_leeway: ${RATOS_SESSION_TIMEOUT_LEEWAY}
   game:
-    game_on: false
+    game_on: ${RATOS_GAMIFICATION_ON}
     low_boundary_from: 80.0
     low_boundary_to: 84.99
     middle_boundary_from: 85.0
